fix(prod): EKS 배포 전 Critical 이슈 수정
  - Pod Identity 모듈 변수명 버그 수정
  - AWS Account ID 노출 방지 (prod-registry.yaml 분리)
  - RDS SSL 연결 설정 및 환경변수 추가
  - chat/video 서비스 S3 Pod Identity 추가

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,8 @@ sealed-secrets-*.key
 # ============================================
 k8s/helm/environments/*-secrets.yaml
 k8s/helm/environments/secrets-*.yaml
+k8s/helm/environments/prod-registry.yaml
+!k8s/helm/environments/prod-registry.example.yaml
 k8s/helm/charts/**/values-prod.yaml
 k8s/helm/charts/**/values-production.yaml
 k8s/helm/charts/**/secrets.yaml
