fix(prod): add DB/Redis endpoints to Secrets Manager, remove bastion

--- a/k8s/argocd/base/external-secrets/external-secret-shared.yaml
+++ b/k8s/argocd/base/external-secrets/external-secret-shared.yaml
@@ -4,7 +4,7 @@
 # AWS Secrets Manager에서 시크릿을 가져와 K8s Secret으로 생성
 # 이 Secret은 모든 서비스에서 공유됨
 
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: wealist-shared-secret
@@ -21,16 +21,31 @@ spec:
 
   data:
     # -------------------------------------------------------------------------
-    # Database Credentials (RDS 자동 관리)
+    # Database Connection (RDS)
     # -------------------------------------------------------------------------
+    - secretKey: DB_HOST
+      remoteRef:
+        key: "wealist/prod/database/endpoint"
+        property: host
+
+    - secretKey: POSTGRES_HOST
+      remoteRef:
+        key: "wealist/prod/database/endpoint"
+        property: host
+
     - secretKey: DB_PASSWORD
       remoteRef:
-        key: "rds!db-wealist-prod-postgres"
+        key: "rds!db-0dd66dc8-92cb-45fd-ab6e-0ccb108670ae"
         property: password
 
     # -------------------------------------------------------------------------
-    # Redis Credentials (Terraform 생성)
+    # Redis Connection (ElastiCache)
     # -------------------------------------------------------------------------
+    - secretKey: REDIS_HOST
+      remoteRef:
+        key: "wealist/prod/redis/endpoint"
+        property: host
+
     - secretKey: REDIS_PASSWORD
       remoteRef:
         key: "wealist/prod/redis/auth-token"
