fix(ci): use commit comparison for change detection in push events
   The paths-filter was comparing main vs service-deploy-prod which resulted
   in no changes detected after merge. Changed to compare before...after
   commits on the same branch to properly detect changes in merge commits.

--- a/.github/workflows/ci-build-images.yaml
+++ b/.github/workflows/ci-build-images.yaml
@@ -88,11 +88,14 @@ jobs:
           echo "Environment: ${ENV}"
           echo "K8s Branch: k8s-deploy-${ENV}"
 
-      # Push 이벤트: 자동 감지
+      # Push 이벤트: 자동 감지 (push된 커밋의 변경사항 비교)
       - uses: dorny/paths-filter@v2
         if: github.event_name == 'push'
         id: filter
         with:
+          # push 이벤트에서는 before...after 커밋 비교 (merge 시에도 변경사항 감지)
+          base: ${{ github.event.before }}
+          ref: ${{ github.sha }}
           filters: |
             common-package:
               - 'packages/wealist-advanced-go-pkg/**'
