fix(helm): change imagePullPolicy to Always for prod
   Ensures new images are pulled instead of using cached versions.

--- a/k8s/helm/environments/prod.yaml
+++ b/k8s/helm/environments/prod.yaml
@@ -61,7 +61,7 @@ video-service:
     DB_NAME: "video_db"
 
 image:
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   tag: "latest"
 
 # -----------------------------------------------------------------------------
