terraform argocd 설정 변경 - 메트릭 수집 되게 변경

--- a/k8s/argocd/apps/prod/frontend.yaml
+++ b/k8s/argocd/apps/prod/frontend.yaml
@@ -18,7 +18,7 @@ spec:
         - ../../environments/prod.yaml
       parameters:
         - name: image.repository
-          value: "frontend"
+          value: "prod/frontend"
         - name: image.tag
           value: "prod-latest"
   destination:
