--- a/k8s/argocd/apps/prod/auth-service.yaml
+++ b/k8s/argocd/apps/prod/auth-service.yaml
@@ -18,7 +18,7 @@ spec:
         - ../../environments/prod.yaml
       parameters:
         - name: image.repository
-          value: "auth-service"
+          value: "prod/auth-service"
         - name: image.tag
           value: "prod-latest"
         - name: externalSecrets.enabled
