--- a/k8s/argocd/base/external-secrets/external-secret-shared.yaml
+++ b/k8s/argocd/base/external-secrets/external-secret-shared.yaml
@@ -35,8 +35,13 @@ spec:
 
     - secretKey: DB_PASSWORD
       remoteRef:
-        key: "rds!db-0dd66dc8-92cb-45fd-ab6e-0ccb108670ae"
+        key: "wealist/prod/database/endpoint"
         property: password
+
+    - secretKey: DB_USERNAME
+      remoteRef:
+        key: "wealist/prod/database/endpoint"
+        property: username
 
     # -------------------------------------------------------------------------
     # Redis Connection (ElastiCache)
