fix: remove prod/ prefix from image.repository in ArgoCD apps
  - ArgoCD apps now use image.repository without env prefix
  - ECR repository: user-service (not prod/user-service)
  - Image tags already include env prefix: prod-latest
  - Remove unused namespace resources from Terraform (ArgoCD manages them)

--- a/k8s/argocd/apps/prod/chat-service.yaml
+++ b/k8s/argocd/apps/prod/chat-service.yaml
@@ -18,7 +18,7 @@ spec:
         - ../../environments/prod.yaml
       parameters:
         - name: image.repository
-          value: "prod/chat-service"
+          value: "chat-service"
         - name: image.tag
           value: "prod-latest"
         - name: externalSecrets.enabled
