--- a/k8s/argocd/apps/prod/frontend.yaml
+++ b/k8s/argocd/apps/prod/frontend.yaml
@@ -18,7 +18,7 @@ spec:
         - ../../environments/prod.yaml
       parameters:
         - name: image.repository
-          value: "prod/frontend"
+          value: "frontend"
         - name: image.tag
           value: "prod-latest"
   destination:
