--- a/.github/workflows/frontend-prod.yaml
+++ b/.github/workflows/frontend-prod.yaml
@@ -15,7 +15,7 @@
 # Required Secrets:
 #   AWS_ROLE_ARN_FRONTEND, AWS_S3_BUCKET_PROD, AWS_CLOUDFRONT_DISTRIBUTION_ID_PROD
 # Optional Secrets:
-#   VITE_API_BASE_URL, API_DOMAIN_PROD
+#   VITE_API_BASE_URL, API_DOMAIN
 # =============================================================================
 
 name: Frontend CI/CD (Prod)
@@ -62,11 +62,16 @@ jobs:
       image_tag: ${{ steps.prepare.outputs.image_tag }}
       version: ${{ steps.prepare.outputs.version }}
       short_sha: ${{ steps.prepare.outputs.short_sha }}
+      image_name: ${{ steps.prepare.outputs.image_name }}
 
     steps:
       - name: Prepare version info
         id: prepare
         run: |
+          # IMAGE_NAME을 소문자로 변환 (GHCR 요구사항)
+          IMAGE_NAME=$(echo "${{ github.repository }}/frontend" | tr '[:upper:]' '[:lower:]')
+          echo "image_name=${IMAGE_NAME}" >> $GITHUB_OUTPUT
+
           if [ "${{ github.event_name }}" == "push" ]; then
             # 태그 push인 경우 (v1.0.0 형식)
             TAG_NAME="${GITHUB_REF#refs/tags/}"
@@ -84,6 +89,7 @@ jobs:
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
           echo "short_sha=${SHORT_SHA}" >> $GITHUB_OUTPUT
 
+          echo "📦 Image Name: ${IMAGE_NAME}"
           echo "📦 Image Tag: ${IMAGE_TAG}"
           echo "📋 Version: ${VERSION}"
           echo "🔖 Short SHA: ${SHORT_SHA}"
@@ -97,7 +103,7 @@ jobs:
 
       - name: Verify image exists in GHCR
         run: |
-          IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.prepare.outputs.image_tag }}"
+          IMAGE="${{ env.REGISTRY }}/${{ steps.prepare.outputs.image_name }}:${{ steps.prepare.outputs.image_tag }}"
           echo "🔍 Checking if image exists: ${IMAGE}"
 
           if docker manifest inspect "${IMAGE}" > /dev/null 2>&1; then
@@ -126,29 +132,29 @@ jobs:
 
       - name: Add production tags to image
         run: |
-          SOURCE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.validate.outputs.image_tag }}"
+          SOURCE="${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:${{ needs.validate.outputs.image_tag }}"
 
           # Pull the source image
           docker pull "${SOURCE}"
 
           # Tag as :latest (production)
-          docker tag "${SOURCE}" "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
-          docker push "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+          docker tag "${SOURCE}" "${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:latest"
+          docker push "${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:latest"
 
           # Tag as v{version} if not already
-          docker tag "${SOURCE}" "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:v${{ needs.validate.outputs.version }}"
-          docker push "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:v${{ needs.validate.outputs.version }}"
+          docker tag "${SOURCE}" "${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:v${{ needs.validate.outputs.version }}"
+          docker push "${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:v${{ needs.validate.outputs.version }}"
 
           echo "✅ Tagged image as :latest and :v${{ needs.validate.outputs.version }}"
 
       - name: Add stable tag (if requested)
         if: inputs.mark_as_stable == true
         run: |
-          SOURCE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.validate.outputs.image_tag }}"
+          SOURCE="${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:${{ needs.validate.outputs.image_tag }}"
 
           # Tag as :stable
-          docker tag "${SOURCE}" "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stable"
-          docker push "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stable"
+          docker tag "${SOURCE}" "${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:stable"
+          docker push "${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:stable"
 
           echo "🏆 Tagged image as :stable"
 
@@ -158,10 +164,10 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "| Tag | Image |" >> $GITHUB_STEP_SUMMARY
           echo "|-----|-------|" >> $GITHUB_STEP_SUMMARY
-          echo "| \`:latest\` | \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| \`:v${{ needs.validate.outputs.version }}\` | \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:v${{ needs.validate.outputs.version }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| \`:latest\` | \`${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:latest\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| \`:v${{ needs.validate.outputs.version }}\` | \`${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:v${{ needs.validate.outputs.version }}\` |" >> $GITHUB_STEP_SUMMARY
           if [ "${{ inputs.mark_as_stable }}" == "true" ]; then
-            echo "| \`:stable\` 🏆 | \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stable\` |" >> $GITHUB_STEP_SUMMARY
+            echo "| \`:stable\` 🏆 | \`${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:stable\` |" >> $GITHUB_STEP_SUMMARY
           fi
 
   # ===========================================================================
@@ -205,7 +211,7 @@ jobs:
 
       - name: Inject runtime config (Production)
         env:
-          API_DOMAIN_RAW: ${{ secrets.API_DOMAIN_PROD }}
+          API_DOMAIN_RAW: ${{ secrets.API_DOMAIN }}
           VERSION: ${{ needs.validate.outputs.version }}
           SHORT_SHA: ${{ needs.validate.outputs.short_sha }}
         run: |
@@ -277,7 +283,7 @@ jobs:
           echo "| **Commit** | \`${SHORT_SHA}\` |" >> $GITHUB_STEP_SUMMARY
           echo "| **S3 Bucket** | \`${{ secrets.AWS_S3_BUCKET_PROD }}\` |" >> $GITHUB_STEP_SUMMARY
           echo "| **Versioned Path** | \`/${VERSION}/\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| **Docker Image** | \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Docker Image** | \`${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:latest\` |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 🔄 Rollback Commands" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -319,8 +325,8 @@ jobs:
 
             ### Docker Image
             ```
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:${{ github.ref_name }}
+            ${{ env.REGISTRY }}/${{ needs.validate.outputs.image_name }}:latest
             ```
 
             ### Deployment
