feat(istio): Add Kubernetes Gateway API for Ambient mode
   - Add k8s-gateway.yaml template for Kubernetes Gateway API
   - Enable k8sGateway in prod.yaml (replaces manual istio-ingressgateway)
   - Add missing default values to fix template nil pointer errors
   - Istio will automatically provision Deployment/Service for Gateway

   This follows the recommended approach for Istio Ambient mode (1.24+)
   where Kubernetes Gateway API is preferred over the legacy Istio Gateway.

--- a/k8s/helm/environments/prod.yaml
+++ b/k8s/helm/environments/prod.yaml
@@ -203,13 +203,28 @@ istio:
   namespace: wealist-prod
 
   gateway:
-    enabled: false  # EKS ALB Ingress 또는 별도 Gateway 사용
+    enabled: false  # 기존 Istio Gateway API (사용 안 함)
     name: wealist-gateway
     hosts:
       - "wealist.co.kr"
       - "api.wealist.co.kr"
     tls:
-      enabled: false  # CloudFront에서 SSL 처리
+      enabled: false
+
+  # Kubernetes Gateway API - Ingress Gateway (Ambient 모드 권장)
+  # Istio가 자동으로 Deployment/Service 생성
+  k8sGateway:
+    enabled: true
+    name: istio-ingressgateway
+    namespace: istio-system
+    gatewayClassName: istio
+    listeners:
+      http:
+        port: 80
+        allowedRoutes:
+          from: All
+      https:
+        enabled: false  # ALB에서 SSL 종료
 
   # HTTPRoute 설정 (Kubernetes Gateway API)
   httpRoute:
