--- a/k8s/helm/charts/wealist-monitoring/templates/grafana/deployment.yaml
+++ b/k8s/helm/charts/wealist-monitoring/templates/grafana/deployment.yaml
@@ -18,8 +18,8 @@ spec:
       labels:
         app: grafana
         app.kubernetes.io/name: grafana
-        # Ambient 모드에서 제외 - Kiali/외부에서 plain HTTP로 접근 가능하도록
-        istio.io/dataplane-mode: none
+        # Ambient 모드에 포함 - mTLS로 Prometheus 데이터 수집
+        # PeerAuthentication에서 PERMISSIVE 설정으로 외부 접근도 허용
       annotations:
         checksum/datasources: {{ include (print $.Template.BasePath "/grafana/configmap.yaml") . | sha256sum }}
     spec:
