--- a/k8s/helm/charts/wealist-monitoring/templates/prometheus/deployment.yaml
+++ b/k8s/helm/charts/wealist-monitoring/templates/prometheus/deployment.yaml
@@ -18,8 +18,8 @@ spec:
       labels:
         app: prometheus
         app.kubernetes.io/name: prometheus
-        # Ambient 모드에서 제외 - Kiali/외부에서 plain HTTP로 접근 가능하도록
-        istio.io/dataplane-mode: none
+        # Ambient 모드에 포함 - mTLS로 서비스 메트릭 수집
+        # PeerAuthentication에서 PERMISSIVE 설정으로 외부 접근도 허용
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/prometheus/configmap.yaml") . | sha256sum }}
     spec:
