--- a/.github/workflows/ci-prod-images.yaml
+++ b/.github/workflows/ci-prod-images.yaml
@@ -125,7 +125,7 @@ jobs:
       
       - name: Create PR or commit
         env:
-          GH_TOKEN: ${{ secrets.GITOPS_PAT }}
+          GH_TOKEN: ${{ secrets.GITOPS_PAT || github.token }}
         run: |
           SERVICE="${{ inputs.service }}"
           TAG="${{ inputs.image_tag }}"
