--- a/.github/workflows/ci-prod-images.yaml
+++ b/.github/workflows/ci-prod-images.yaml
@@ -73,6 +73,8 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      issues: write           # 이게 있어야 issues 생성 가능
+      repository-projects: read
     
     steps:
       - uses: actions/checkout@v4
