--- a/k8s/argocd/base/external-secrets/external-secret-shared.yaml
+++ b/k8s/argocd/base/external-secrets/external-secret-shared.yaml
@@ -102,6 +102,13 @@ spec:
       remoteRef:
         key: "wealist/prod/livekit/credentials"
         property: api_secret
+     # -------------------------------------------------------------------------
+    # Discord Webhook (Terraform placeholder → 수동 업데이트 필요)
+    # -------------------------------------------------------------------------
+    - secretKey: DISCORD_WEBHOOK_URL
+      remoteRef:
+        key: "wealist/prod/notifications/discord"
+        property: webhook_url
 
     # -------------------------------------------------------------------------
     # Grafana Admin (Terraform 자동 생성)
