디스코드 설정

--- a/k8s/argocd/apps/prod/noti-service.yaml
+++ b/k8s/argocd/apps/prod/noti-service.yaml
@@ -6,9 +6,9 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "2"
     # Discord 배포 알림 설정 (Production)
-    notifications.argoproj.io/subscribe.on-deployed.discord: prod-deployment-alerts
-    notifications.argoproj.io/subscribe.on-sync-failed.discord: prod-deployment-alerts
-    notifications.argoproj.io/subscribe.on-sync-running.discord: prod-deployment-alerts
+    notifications.argoproj.io/subscribe.on-deployed.discord: ""
+    notifications.argoproj.io/subscribe.on-sync-failed.discord: ""
+    notifications.argoproj.io/subscribe.on-sync-running.discord: ""
   labels:
     environment: production
     service: noti-service
