--- a/k8s/argocd/base/external-secrets/external-secret-shared.yaml
+++ b/k8s/argocd/base/external-secrets/external-secret-shared.yaml
@@ -4,7 +4,7 @@
 # AWS Secrets Manager에서 시크릿을 가져와 K8s Secret으로 생성
 # 이 Secret은 모든 서비스에서 공유됨
 
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: wealist-shared-secret
