--- a/k8s/argocd/base/external-secrets/cluster-secret-store.yaml
+++ b/k8s/argocd/base/external-secrets/cluster-secret-store.yaml
@@ -5,7 +5,7 @@
 # Terraform에서 external-secrets 네임스페이스의 external-secrets ServiceAccount에
 # Pod Identity가 설정되어 있어야 함
 
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: aws-secrets-manager
