fix: ArgoCD 앱에 ESO 기본값 필드    ignoreDifferences 추가
   ESO가 ExternalSecret에 자동으로 추가하는 기본값 필드들로 인해
   ArgoCD가 OutOfSync를 감지하는 문제 해결:
   - conversionStrategy, decodingStrategy, metadataPolicy, deletionPolicy

--- a/k8s/argocd/apps/prod/external-secrets.yaml
+++ b/k8s/argocd/apps/prod/external-secrets.yaml
@@ -20,6 +20,15 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: wealist-prod
+  # ESO가 자동으로 추가하는 기본값 필드 무시
+  ignoreDifferences:
+    - group: external-secrets.io
+      kind: ExternalSecret
+      jqPathExpressions:
+        - .spec.data[].remoteRef.conversionStrategy
+        - .spec.data[].remoteRef.decodingStrategy
+        - .spec.data[].remoteRef.metadataPolicy
+        - .spec.target.deletionPolicy
   syncPolicy:
     automated:
       prune: true
